# slimegetter

./: .gitignore  PROJECT_CONTEXT.md  README.md  Start Mission Control.cmd  Start-Demo-Mission-Control.ps1  Start-Mission-Control.ps1  Stop Mission Control.cmd  Stop-Mission-Control.ps1  compose.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_initial_journal.py  20260713_0002_ordered_events.py  20260713_0003_learning_ops.py  20260713_0004_dashboard_indexes.py  20260713_0005_worker_heartbeats.py  20260713_0006_mt5_strategy_research.py  20260713_0007_mt5_indexes.py  20260713_0008_closed_trade_sync.py  20260713_0009_unique_worker_heartbeat.py  20260713_0010_heartbeat_index_name.py  20260714_0011_simulated_positions.py  20260714_0012_execution_claims.py  20260718_0013_execution_incidents_profit_evidence.py  20260721_0014_authorization_pair_metadata.py  20260721_0015_mutiny_research_rankings.py  20260721_0016_time_window_rankings.py  20260722_0014_defensive_risk_sizing.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  routes.py
backend/app/application/: avenger.py  backtesting.py  (+10 more)
backend/data/: verified_events.json
backend/scripts/: audit_dashboard_data.py  backup_sqlite.ps1  build_histdata_dataset.py  fetch_oanda_history.py  generate_session_report.py  install_levi_daily_report_task.ps1  monitor_mission_control.ps1  run_demo_soak.ps1  run_development_screen.py  seed_strategy_catalog.py  start_session_report_worker.ps1  validate_strategy_catalog.py  verify_shadow_stack.py
(+100 files in other folders)
