[project]
name = "xauusd-platform-backend"
version = "0.1.0"
description = "Safety-first, explainable XAUUSD trading platform"
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.15,<2.0",
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.7,<3.0",
  "openai>=1.0,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.2,<4.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.9,<1.0",
]
mt5 = ["MetaTrader5>=5.0.5000"]
research = ["numpy>=2.3,<3.0", "pandas>=3.0,<4.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
